[gd_scene load_steps=9 format=2]

[ext_resource path="res://code/Main.gd" type="Script" id=1]
[ext_resource path="res://code/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/videoblocks-video-4k-animation-shinny-blue-stars-slowly-movement-in-black-galaxy-space-background-at-night_rlkmgjykg_thumbnail-full01.png" type="Texture" id=3]
[ext_resource path="res://code/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://code/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://.import/House In a Forest Loop.ogg-1a6a72ae843ad792b7039931227e8d50.oggstr" type="AudioStream" id=6]
[ext_resource path="res://.import/gameover.wav-98c95c744b35280048c2bd093cf8a356.sample" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1019, 600, 0, 0, 0, 0, -1, 600, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 1019, 0, 0, 0, 0, 0, 1019, 600 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -140.0 ],
"_edit_vertical_guides_": [ 170.0 ]
}
Mob = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1020.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0431373, 0.0392157, 0.12549, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 517.5, 301.25 )
scale = Vector2( 0.544271, 0.571759 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1000, 900 )
_sections_unfolded = [ "Material", "Region", "Visibility", "material" ]

[node name="MobPath" type="Path2D" parent="."]
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 1, 0 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 1019, 600 )
rotation = -3.14156
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="MobTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 500, 290 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[connection signal="hit" from="Player" to="." method="game_over"]
